fixing images to list

--- a/movieApp/movie.html
+++ b/movieApp/movie.html
@@ -15,11 +15,12 @@
                     <div class="inside panel">
                         <div class="poster">
                             <div class="content front">
-                                <img id = "i1">
+                                <li class = "image" id = "i1"></li>
                             </div>
                         </div>
                         <div class="movieInfo">
                             <div class="content back">
+                            
                                 
                             </div>
                         </div>
@@ -30,7 +31,7 @@
                     <div class="inside panel">
                         <div class="poster">
                             <div class="content front">
-                                <img id = "i2">
+                                <li class = "image" id = "i2"></li>
                             </div>
                         </div>
                         <div class="movieInfo">
@@ -45,7 +46,7 @@
                     <div class="inside panel">
                         <div class="poster">
                             <div class="content front">
-                                <img id = "i3">
+                                <li class = "image" id = "i3"></li>
                             </div>
                         </div>
                         <div class="movieInfo">
