--- a/movieApp/movie.html
+++ b/movieApp/movie.html
@@ -77,6 +77,146 @@
                 </div>
 
             </section>
+            <section class = "section s4" >
+                <div class="inside panel" id="m4">
+                    <div class="poster">
+                        <div class="content front">
+                            <li class = "image" id = "i4"></li>
+                        </div>
+                    </div>
+                    <div class="movieInfo">
+                        <div class="content back" id="b4">
+                            <h3 id="movie_title">Movie Title</h4>
+                            <h5 id="year"> (Year) </h5>
+                            <h5 id="director"> Directed by: </h5>
+                            <h5 id="writer"> Written by: </h5>
+                            <h5 id="actors"> Actors: </h5>
+                            <h5 id="rating"> IMDb Rating: </h5>
+                            <p id="plot"> blah blah blah blah blah blah blah blah blah blah blah blah </p>
+                        </div>
+                    </div>
+                </div>
+            </section>
+            <section class = "section s5" >
+                <div class="inside panel" id="m5">
+                    <div class="poster">
+                        <div class="content front">
+                            <li class = "image" id = "i5"></li>
+                        </div>
+                    </div>
+                    <div class="movieInfo">
+                        <div class="content back" id="b5">
+                            <h3 id="movie_title">Movie Title</h4>
+                            <h5 id="year"> (Year) </h5>
+                            <h5 id="director"> Directed by: </h5>
+                            <h5 id="writer"> Written by: </h5>
+                            <h5 id="actors"> Actors: </h5>
+                            <h5 id="rating"> IMDb Rating: </h5>
+                            <p id="plot"> blah blah blah blah blah blah blah blah blah blah blah blah </p>
+                        </div>
+                    </div>
+                </div>
+            </section>
+            <section class = "section s6" >
+                <div class="inside panel" id="m6">
+                    <div class="poster">
+                        <div class="content front">
+                            <li class = "image" id = "i6"></li>
+                        </div>
+                    </div>
+                    <div class="movieInfo">
+                        <div class="content back" id="b6">
+                            <h3 id="movie_title">Movie Title</h4>
+                            <h5 id="year"> (Year) </h5>
+                            <h5 id="director"> Directed by: </h5>
+                            <h5 id="writer"> Written by: </h5>
+                            <h5 id="actors"> Actors: </h5>
+                            <h5 id="rating"> IMDb Rating: </h5>
+                            <p id="plot"> blah blah blah blah blah blah blah blah blah blah blah blah </p>
+                        </div>
+                    </div>
+                </div>
+            </section>
+            <section class = "section s7" >
+                <div class="inside panel" id="m7">
+                    <div class="poster">
+                        <div class="content front">
+                            <li class = "image" id = "i7"></li>
+                        </div>
+                    </div>
+                    <div class="movieInfo">
+                        <div class="content back" id="b7">
+                            <h3 id="movie_title">Movie Title</h4>
+                            <h5 id="year"> (Year) </h5>
+                            <h5 id="director"> Directed by: </h5>
+                            <h5 id="writer"> Written by: </h5>
+                            <h5 id="actors"> Actors: </h5>
+                            <h5 id="rating"> IMDb Rating: </h5>
+                            <p id="plot"> blah blah blah blah blah blah blah blah blah blah blah blah </p>
+                        </div>
+                    </div>
+                </div>
+            </section>
+            <section class = "section s8" >
+                <div class="inside panel" id="m8">
+                    <div class="poster">
+                        <div class="content front">
+                            <li class = "image" id = "i8"></li>
+                        </div>
+                    </div>
+                    <div class="movieInfo">
+                        <div class="content back" id="b8">
+                            <h3 id="movie_title">Movie Title</h4>
+                            <h5 id="year"> (Year) </h5>
+                            <h5 id="director"> Directed by: </h5>
+                            <h5 id="writer"> Written by: </h5>
+                            <h5 id="actors"> Actors: </h5>
+                            <h5 id="rating"> IMDb Rating: </h5>
+                            <p id="plot"> blah blah blah blah blah blah blah blah blah blah blah blah </p>
+                        </div>
+                    </div>
+                </div>
+            </section>
+            <section class = "section s9" >
+                <div class="inside panel" id="m9">
+                    <div class="poster">
+                        <div class="content front">
+                            <li class = "image" id = "i9"></li>
+                        </div>
+                    </div>
+                    <div class="movieInfo">
+                        <div class="content back" id="b9">
+                            <h3 id="movie_title">Movie Title</h4>
+                            <h5 id="year"> (Year) </h5>
+                            <h5 id="director"> Directed by: </h5>
+                            <h5 id="writer"> Written by: </h5>
+                            <h5 id="actors"> Actors: </h5>
+                            <h5 id="rating"> IMDb Rating: </h5>
+                            <p id="plot"> blah blah blah blah blah blah blah blah blah blah blah blah </p>
+                        </div>
+                    </div>
+                </div>
+            </section>
+            <section class = "section s10" >
+                <div class="inside panel" id="m10">
+                    <div class="poster">
+                        <div class="content front">
+                            <li class = "image" id = "i10"></li>
+                        </div>
+                    </div>
+                    <div class="movieInfo">
+                        <div class="content back" id="b10">
+                            <h3 id="movie_title">Movie Title</h4>
+                            <h5 id="year"> (Year) </h5>
+                            <h5 id="director"> Directed by: </h5>
+                            <h5 id="writer"> Written by: </h5>
+                            <h5 id="actors"> Actors: </h5>
+                            <h5 id="rating"> IMDb Rating: </h5>
+                            <p id="plot"> blah blah blah blah blah blah blah blah blah blah blah blah </p>
+                        </div>
+                    </div>
+                </div>
+            </section>
         </div>
     </div>
 <nav class = "foot"></nav>
