--- a/movieApp/movie.html
+++ b/movieApp/movie.html
@@ -4,8 +4,7 @@
 
         <script src = "jquery.onepage-scroll.js"></script>
         <link rel="stylesheet" type="text/css" href="movieStyle.css">
-
-        <title>Movie App</title>
+        <title>theMDb</title>
     </head>
     <body>
     <nav class = "head"></nav>
@@ -14,6 +13,7 @@
         </div>
         <div class = "main">
             <section class = "section s1">
+                
                 <div class="inside panel" id="m1">
                     <div class="poster">
                         <div class="content front">
@@ -23,19 +23,19 @@
                     <div class="movieInfo">
                         <div class="content back" id="b1">
                             <h3 id="movie_title">Movie Title</h4>
-                            <h5 id="year"> (Year) </h5>
+                            <h5 id="year"> Released in: </h5>
                             <h5 id="director"> Directed by: </h5>
                             <h5 id="writer"> Written by: </h5>
                             <h5 id="actors"> Actors: </h5>
                             <h5 id="rating"> IMDb Rating: </h5>
                             <p id="plot"> blah blah blah blah blah blah blah blah blah blah blah blah </p>
 
-
                         </div>
                     </div>
                 </div>
-
+                
             </section>
+
             <section class = "section s2">
                 <div class="inside panel" id="m2">
                     <div class="poster">
@@ -56,6 +56,7 @@
                     </div>
                 </div>
             </section>
+
             <section class = "section s3" >
                 <div class="inside panel" id="m3">
                     <div class="poster">
@@ -75,8 +76,8 @@
                         </div>
                     </div>
                 </div>
-
             </section>
+
             <section class = "section s4" >
                 <div class="inside panel" id="m4">
                     <div class="poster">
@@ -97,6 +98,7 @@
                     </div>
                 </div>
             </section>
+
             <section class = "section s5" >
                 <div class="inside panel" id="m5">
                     <div class="poster">
@@ -117,6 +119,7 @@
                     </div>
                 </div>
             </section>
+
             <section class = "section s6" >
                 <div class="inside panel" id="m6">
                     <div class="poster">
@@ -137,6 +140,7 @@
                     </div>
                 </div>
             </section>
+
             <section class = "section s7" >
                 <div class="inside panel" id="m7">
                     <div class="poster">
@@ -157,6 +161,7 @@
                     </div>
                 </div>
             </section>
+
             <section class = "section s8" >
                 <div class="inside panel" id="m8">
                     <div class="poster">
@@ -177,6 +182,7 @@
                     </div>
                 </div>
             </section>
+
             <section class = "section s9" >
                 <div class="inside panel" id="m9">
                     <div class="poster">
@@ -197,6 +203,7 @@
                     </div>
                 </div>
             </section>
+
             <section class = "section s10" >
                 <div class="inside panel" id="m10">
                     <div class="poster">
