adding imgs into li now, inside the load, maybe need to create in DOM next

--- a/movieApp/movie.html
+++ b/movieApp/movie.html
@@ -22,7 +22,7 @@
                     </div>
                     <div class="movieInfo">
                         <div class="content back" id="b1">
-                            <h3 id="movie_title">Movie Title</h4>
+                            <h3 id="title">Movie Title</h4>
                             <h5 id="year"> Released in: </h5>
                             <h5 id="director"> Directed by: </h5>
                             <h5 id="writer"> Written by: </h5>
@@ -45,7 +45,7 @@
                     </div>
                     <div class="movieInfo">
                         <div class="content back" id="b2">
-                            <h3 id="movie_title">Movie Title</h4>
+                            <h3 id="title">Movie Title</h4>
                             <h5 id="year"> (Year) </h5>
                             <h5 id="director"> Directed by: </h5>
                             <h5 id="writer"> Written by: </h5>
