redoing creation in dom

--- a/movieApp/movie.html
+++ b/movieApp/movie.html
@@ -12,7 +12,7 @@
         <div class = "info" id="info">
         </div>
         <div class = "main">
-            <section class = "section s1">
+            <!-- <section class = "section s1">
                 
                 <div class="inside panel" id="m1">
                     <div class="poster">
@@ -34,9 +34,9 @@
                     </div>
                 </div>
                 
-            </section>
+            </section> -->
 
-            <section class = "section s2">
+            <!-- <section class = "section s2">
                 <div class="inside panel" id="m2">
                     <div class="poster">
                         <div class="content front">
@@ -223,7 +223,7 @@
                         </div>
                     </div>
                 </div>
-            </section>
+            </section> -->
         </div>
     </div>
 <nav class = "foot"></nav>
