back sorta working

--- a/movieApp/movie.html
+++ b/movieApp/movie.html
@@ -35,8 +35,8 @@
                     </div>
                 </div>
                 
-            </section> -->
-
+            </section>
+ -->
             <!-- <section class = "section s2">
                 <div class="inside panel" id="m2">
                     <div class="poster">
